--- a/Test1/test1/src/app/components/main/main.component.html
+++ b/Test1/test1/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-<form [formGroup]="employeeForm" (submit)="submit();">
+<form [formGroup]="employeeForm">
     <div class="card bg-gradient-dark text-dark">
         <div class="row mt-3">
             <div class="col-3">Name of employee</div>
